# DotFiles

./: .gitconfig  .profile  pyproject.toml  readme.md
.config/MangoHud/: MangoHud.conf
.config/fish/: config.fish
.config/mpv/: mpv.conf
.config/pacman/: pacman.conf
.config/psd/: psd.conf
.config/systemd/user/: nvibrant.service
.config/systemd/user/psd-resync.timer.d/: frequency.conf
.config/wireplumber/wireplumber.conf.d/: disable-suspension.conf
.config/yay/: config.json
.dotfiles/: get.sh
dotfiles/: __main__.py  gitinclude.py  gnome.py  pacman.py
home/tremeschin/: .profile
home/tremeschin/.config/MangoHud/: MangoHud.conf
home/tremeschin/.config/fish/: config.fish
home/tremeschin/.config/fish/conf.d/: autoenv.fish
home/tremeschin/.config/pacman/: makepkg.conf  pacman.conf
home/tremeschin/.config/pipewire/pipewire.conf.d/: pipewire.conf
home/tremeschin/.config/python/: startup.py
home/tremeschin/.config/systemd/user/: nvibrant.service
