[project]
name        = "dotfiles"
version     = "1.0"
description = "Sensible system dotfiles"
classifiers = ["Private :: Do Not Upload"]
license     = "MIT"
dependencies = [
    "attrs",
    "cyclopts",
    "pydantic",
    "tomlkit",
]

[project.scripts]
dot     = "dotfiles.__main__:main"
get-yay = "dotfiles.pacman:Yay.get"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
